# internal/interfaces/http/routes/auth.routes.go
@@ -12,5 +12,6 @@ func RegisterAuthRoutes(router *gin.RouterGroup, authController *controllers.Aut
 		authRoutes.POST("/register", authController.Register)
 		authRoutes.POST("/login", authController.Login)
 		authRoutes.POST("/refresh", authController.RefreshToken)
+		authRoutes.POST("/logout", authController.Logout)
 	}
 }	
